# wit-example

./: .gitignore  Cargo.toml  justfile
python/: script.py
runtime/: Cargo.toml
runtime/src/: main.rs
script/: Cargo.toml
script/src/: lib.rs
wit/: script.wit
